--- a/web-client/app/navbar/navbar.module.css
+++ b/web-client/app/navbar/navbar.module.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 5px;
     background-color: beige;
     height: 90px;
 }
